[gd_scene load_steps=2 format=3 uid="uid://835lctc2h01s"]

[ext_resource type="Script" path="res://Hurtbox.gd" id="1"]

[node name="Hurtbox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="invinc_end" from="." to="." method="_on_Hurtbox_invinc_end"]
[connection signal="invinc_start" from="." to="." method="_on_Hurtbox_invinc_start"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
